Cleanup, no functional changes